# delivery

./: CMakeLists.txt  conanfile.txt  deliveryVersion.h.in
applications/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/deskCore/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.hpp
apps/deskOrders/: CMakeLists.txt  main.cpp
apps/deskResources/: CMakeLists.txt  resources.qrc
apps/deskResources/qml/: deskOrdersMain.qml
apps/deskResources/qmlPages/: LoginPage.qml  MainPage.qml  qmldir
apps/deskResources/wrappers/: LoginWrapper.cpp  LoginWrapper.hpp
cmake/: CMakeLists.txt  deliveryVersion.h.in
dbtables/: user.h
ddl/: README.MD  user.sql
dependencies/: CMakeLists.txt
dependencies/gRPC/: CMakeLists.txt
dependencies/mysqlpp/: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  messages.h
protos/config/: Login.proto  Signature.proto  Version.proto
protos/user/: user.proto
services/: CMakeLists.txt  main.cpp  serviceConfig.cpp  serviceConnect.cpp  serviceConnect.hpp
services/modules/: CMakeLists.txt
services/modules/config/: CMakeLists.txt  ServiceSignatureCall.hpp  ServiceVersionCall.cpp
services/serviceConfig/: CMakeLists.txt  ServiceLoginCall.cpp  ServiceLoginCall.hpp  ServiceSignatureCall.cpp  ServiceVersionCall.cpp  ServiceVersionCall.hpp
services/serviceConnect/: CMakeLists.txt  serviceConnect.hpp
services/serviceConnect/modules/: CMakeLists.txt  ServiceLoginCall.cpp  ServiceSignatureCall.cpp
services/userService/: CMakeLists.txt  main.cpp  serviceConnect.cpp  serviceConnect.hpp  userCall.cpp
services/userService/modules/: CMakeLists.txt  user.cpp  user.hpp  userCall.cpp  userCall.hpp
